--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "license": "MIT",
   "dependencies": {
     "@nuxt/content": "^1.14.0",
-    "nuxt": "^2.15.8"
+    "@nuxtjs/ngrok": "^2.0.0",
+    "node-sass": "^6.0.1",
+    "nuxt": "^2.15.8",
+    "sass-loader": "^10.1.1"
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^2.1.1",
